Introduce local mode which uses local files instead of making HTTP requests

--- a/config.json
+++ b/config.json
@@ -2,7 +2,10 @@
     "provider": {
         "servername": "server[:port]",
         "username": "username",
-        "password": "password"
+        "password": "password",
+        "auth_file": "auth.json",
+        "live_categories_file": "live_categories.json",
+        "live_streams_file": "live_streams.json"
     },
     "local": {
     }
